crates/toml_edit/tests/snapshots/invalid/ext/not-toml/deb.stderr
TOML parse error at line 1, column 10
  |
1 | Package: R6
  |          ^
key with no value, expected `=`
